--- a/public/index.html
+++ b/public/index.html
@@ -17,17 +17,10 @@
       perspective: 1200px;
     }
     body.dark { background: #000; }
-    .main {
-      height: 100dvh;
-      display: flex;
-      flex-direction: column;
-      opacity: 0;
-      animation: fadeIn 1.5s ease forwards;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+
+    .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.5s ease forwards; }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+
     .grid {
       flex: 1;
       display: grid;
@@ -59,9 +52,7 @@
       position: relative;
       padding: 10px;
     }
-    @keyframes scaleFadeIn {
-      to { transform: scale(1); opacity: 1; }
-    }
+    @keyframes scaleFadeIn { to { transform: scale(1); opacity: 1; } }
     .block-content {
       position: absolute;
       inset: 0;
@@ -82,11 +73,8 @@
       animation: aparecer 0.6s forwards;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     }
-    @keyframes aparecer {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
-    }
-    /* Animaciones Flotar + Tilt + Destello */
+    @keyframes aparecer { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
+    /* Portada Flotante Limpia, Sin Fondo */
     .portada-wrapper {
       width: 100%;
       height: 100%;
@@ -94,9 +82,8 @@
       justify-content: center;
       align-items: center;
       transform-style: preserve-3d;
-      animation: flotarTiltDestello 8s ease-in-out infinite;
-      background: linear-gradient(135deg, rgba(255,255,255,0.02) 0%, rgba(0,0,0,0.02) 100%);
-      border-radius: 20px;
+      background: transparent;
+      animation: flotarTilt 8s ease-in-out infinite;
     }
     .portada-wrapper img {
       width: 88%;
@@ -104,34 +91,20 @@
       object-fit: cover;
       aspect-ratio: 2/3;
       border-radius: 22px;
-      box-shadow: 0 12px 40px rgba(0,0,0,0.5);
+      box-shadow: 0 15px 40px rgba(0,0,0,0.5);
       transition: transform 0.6s ease, box-shadow 0.6s ease;
+      background: transparent;
     }
     .portada-wrapper img:hover {
-      transform: scale(1.06) rotateY(5deg) rotateX(3deg);
-      box-shadow: 0 20px 50px rgba(255,255,255,0.2);
+      transform: scale(1.08) rotateY(6deg) rotateX(3deg);
+      box-shadow: 0 25px 60px rgba(255,255,255,0.2);
     }
-    @keyframes flotarTiltDestello {
-      0% {
-        transform: translateY(0px) rotateX(0deg) rotateY(0deg);
-        background-position: 0% 0%;
-      }
-      25% {
-        transform: translateY(-8px) rotateX(3deg) rotateY(-3deg);
-        background-position: 25% 25%;
-      }
-      50% {
-        transform: translateY(0px) rotateX(0deg) rotateY(0deg);
-        background-position: 50% 50%;
-      }
-      75% {
-        transform: translateY(-8px) rotateX(-3deg) rotateY(3deg);
-        background-position: 75% 75%;
-      }
-      100% {
-        transform: translateY(0px) rotateX(0deg) rotateY(0deg);
-        background-position: 100% 100%;
-      }
+    @keyframes flotarTilt {
+      0% { transform: translateY(0px) rotateX(0deg) rotateY(0deg); }
+      25% { transform: translateY(-6px) rotateX(3deg) rotateY(-3deg); }
+      50% { transform: translateY(0px) rotateX(0deg) rotateY(0deg); }
+      75% { transform: translateY(-6px) rotateX(-3deg) rotateY(3deg); }
+      100% { transform: translateY(0px) rotateX(0deg) rotateY(0deg); }
     }
     .footer {
       display: flex;
