--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
 html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden;transition:background 1s ease;perspective:1200px}
 body.dark{background:#000}
 .main{height:100dvh;display:flex;flex-direction:column;opacity:0;animation:fadeIn 1.5s ease forwards}
-.grid{flex:1;display:grid;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;gap:2vw;padding:2vw}
+.grid{flex:1;display:grid;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;gap:1vw;padding:1.5vw}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr);grid-template-rows:1fr}}
-.block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:16px;font-weight:bold;font-size:1.1rem;color:#fff;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px}
-.block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:14px;text-align:center}
+.block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:16px;font-weight:bold;font-size:1.1rem;color:#fff;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:8px}
+.block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:12px;text-align:center}
 .label{z-index:1}
-.accionable{color:#fff;font-size:1rem;font-weight:600;padding:16px;border-radius:16px;opacity:0;animation:aparecer .6s forwards;box-shadow:0 8px 30px rgba(0,0,0,.3)}
+.accionable{color:#fff;font-size:1rem;font-weight:600;padding:14px;border-radius:16px;opacity:0;animation:aparecer .6s forwards;box-shadow:0 8px 30px rgba(0,0,0,.3)}
 .portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;animation:flotarRespirarTilt 8s ease-in-out infinite;transform-style:preserve-3d;background:transparent}
 .portada-wrapper img{width:88%;max-height:92%;object-fit:cover;aspect-ratio:2/3;border-radius:22px;box-shadow:0 12px 30px rgba(0,0,0,.4);transition:transform .6s}
 .portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
@@ -31,7 +31,7 @@ body.dark{background:#000}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
 @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-@keyframes flotarRespirarTilt{0%{transform:translateY(0)rotateX(0)rotateY(0)scale(1)}25%{transform:translateY(-6px)rotateX(2deg)rotateY(-2deg)scale(1.015)}50%{transform:translateY(0)rotateX(0)rotateY(0)scale(1)}75%{transform:translateY(-6px)rotateX(-2deg)rotateY(2deg)scale(1.015)}100%{transform:translateY(0)rotateX(0)rotateY(0)scale(1)}}
+@keyframes flotarRespirarTilt{0%,50%,100%{transform:translateY(0) rotateX(0) rotateY(0) scale(1)}25%{transform:translateY(-6px) rotateX(2deg) rotateY(-2deg) scale(1.015)}75%{transform:translateY(-6px) rotateX(-2deg) rotateY(2deg) scale(1.015)}}
 @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.08)}}
 </style>
 </head>
@@ -83,9 +83,8 @@ function revelarTodo(){
       block.innerHTML="";
       block.style.background="none";
       block.style.padding="0";
-      const wrapper=document.createElement("div");
+      const wrapper=document.createElement("div"),img=document.createElement("img");
       wrapper.className="portada-wrapper";
-      const img=document.createElement("img");
       img.src=libroActual.portada;
       img.alt="Portada del libro";
       wrapper.appendChild(img);
