--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,17 @@ html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:lin
 body.dark{background:#000}
 .main{display:flex;flex-direction:column;justify-content:space-between;height:100dvh;opacity:0;animation:fadeIn 1.5s ease forwards}
 .header-message{text-align:center;padding:1vh 1vw;margin-top:1.5vh}
-.header-gradient{font-weight:800;font-size:clamp(1.3rem,2.4vw,2rem);background:linear-gradient(to right,#ff8a00,#e52e71,#9b00ff,#00c6ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;white-space:nowrap}
+.header-gradient{font-weight:800;font-size:clamp(1.4rem,2.5vw,2.2rem);background:linear-gradient(to right,#ff8a00,#e52e71,#9b00ff,#00c6ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;white-space:nowrap}
 .grid{flex:1;display:grid;gap:1vw;padding:1vw;grid-template:1fr 1fr/1fr 1fr}
-@media(orientation:landscape){
+@media(orientation:landscape) and (max-width: 1024px){
   .grid{grid-template:1fr/1fr 1fr 1fr 1fr}
-  .block{max-height:45vh}
+  .block{height:clamp(120px,38vh,240px)}
 }
-.block{position:relative;display:flex;justify-content:center;align-items:center;text-align:center;border-radius:18px;font-weight:bold;font-size:clamp(1rem,1.9vw,1.3rem);color:#fff;background-size:200% 200%;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;padding:6px;height:100%}
+@media(min-width:1025px){
+  .grid{grid-template:1fr 1fr/1fr 1fr}
+  .block{height:clamp(180px,48vh,360px)}
+}
+.block{position:relative;display:flex;justify-content:center;align-items:center;text-align:center;border-radius:18px;font-weight:bold;font-size:clamp(1rem,1.9vw,1.3rem);color:#fff;background-size:200% 200%;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;padding:6px}
 .block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:6px;text-align:center;max-height:100%}
 .label{z-index:1}
 .accionable{color:#fff;font-family:'Poppins',sans-serif;font-size:clamp(.9rem,1.5vw,1.2rem);font-weight:600;padding:10px;border-radius:14px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 6px 20px rgba(0,0,0,.3)}
